<resources>
    <string name="app_name">FindThem</string>
    <string name="app_name2">Find - Them</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmNvcmRlcm81IiwiYSI6ImNsbncyMmFwYjAwNDMyanFoaWY1aXRvbDMifQ.J8Izcv43eJg2gI2zAqe4jw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_people">Registered People</string>
    <string name="menu_pets">Registered Pets</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="menu_registrations">Registrations</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="enter_data">Enter Data</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="exit">Exit</string>
    <string name="map_all_records">Map (All Records)</string>
    <string name="location_content_description">location</string>
    <string name="others">Others</string>
    <string name="uploaded_images">Uploaded Images</string>
    <string name="list">List</string>
</resources>