<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rafac183.findthem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_people"
        android:name="com.rafac183.findthem.ui.registered_people.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/nav_pets"
        android:name="com.rafac183.findthem.ui.registered_pets.PetsFragment"
        android:label="@string/menu_pets"
        tools:layout="@layout/fragment_pets" />
</navigation>